--- a/one/sass/modules/_slider.scss
+++ b/one/sass/modules/_slider.scss
@@ -27,5 +27,9 @@ ul.slider {
         line-height: 38px;
       }
     }
+
+    &:not(.active) {
+      display: none;
+    }
   }
 }
